apps/ckad-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ckad-apps
  labels:
    tier: production
