apps/ckad-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: ckad-apps
spec:
  selector:
    app: web-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
